refactored assets to new folder and deleted unused fonts

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <div class="testingContainer" style="bottom: 0; height: 20%;">
                 <button class="testBtn" id="checkBtn">Check</button>
                 <div id="response" hidden=true>
-                    <button class="responseBtn" id="cross"><img src="cross.svg" style="height: min(10vw, 100px);"/></button><!--✕-->
-                    <button class="responseBtn" id="tick"><img src="tick.svg"  style="height: min(10vw, 100px);"/></button><!--✓-->
+                    <button class="responseBtn" id="cross"><img src="assets/cross.svg" style="height: min(10vw, 100px);"/></button><!--✕-->
+                    <button class="responseBtn" id="tick"><img src="assets/tick.svg"  style="height: min(10vw, 100px);"/></button><!--✓-->
                 </div>
             </div>
         </div>
