html changes to remove furigana label and add day label

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,6 @@
                 <div id="landing-text">
                     <h1>Learn by Force</h1>
                 </div>
-                <button id="switch">Q → A</button>
                 <div id="landing-btns">
                     <button class="catBtn" id="japanese" style="width:30%;">日本語</button>
                     <button class="catBtn" id="bulgarian" style="width:30%;">Български</button>
@@ -27,13 +26,10 @@
         <div id="testing" hidden=true>
             <h1 id="secTitle"></h1>
             <button id="back"><</button>
-            <div class="testingContainer" style="bottom: 60%; height: 20%;">
-                <span id="furi">にほんご</span>
+            <div class="testingContainer" style="bottom: 50%; height: 30%;">
+                <span id="answer"><ruby>日本語<rt>にほんご</rt></ruby></span>
             </div>
-            <div class="testingContainer" style="bottom: 45%; height: 15%;">
-                <span id="answer">日本語</span>
-            </div>
-            <div class="testingContainer" style="bottom: 20%; height: 25%;">
+            <div class="testingContainer" style="bottom: 20%; height: 30%;">
                 <span id="question">English</span>
             </div>
             <div class="testingContainer" style="bottom: 0; height: 20%;">
